// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Identity Default 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <div
      class="row no-gutters"
    >
      <div
        class="col col-2"
      >
        <span
          class="text-center v-chip v-chip--no-color v-chip--outlined theme--light v-size--default"
          tile=""
        >
          <span
            class="v-chip__content"
          >
            
      10f546
    
          </span>
        </span>
      </div>
       
      <div
        class="ma-2 text-center col"
      >
        <span>
          Tom Marvolo Riddle
        </span>
      </div>
       
      <div
        class="ma-2 text-center col"
      >
        <span>
          triddle@example.net
        </span>
      </div>
       
      <div
        class="ma-2 text-center col"
      >
        <span>
          triddle
        </span>
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots Identity Source 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <div
      class="row no-gutters"
    >
      <div
        class="col col-2"
      >
        <span
          class="text-center v-chip v-chip--no-color v-chip--outlined theme--light v-size--default"
          tile=""
        >
          <span
            class="v-chip__content"
          >
            
      10f546
    
          </span>
        </span>
      </div>
       
      <div
        class="ma-2 text-center col"
      >
        <span>
          Tom Marvolo Riddle
        </span>
      </div>
       
      <div
        class="ma-2 text-center col"
      >
        <span>
          triddle@example.net
        </span>
      </div>
       
      <div
        class="ma-2 text-center col"
      >
        <span>
          triddle
        </span>
      </div>
       
      <div
        class="ma-2 text-center col"
      >
        <span>
          github
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots IndividualCard Default 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <div
      class="mx-auto v-card v-card--raised v-sheet theme--light"
    >
      <div
        class="grow v-list-item theme--light"
        tabindex="-1"
      >
        <div
          class="v-avatar v-list-item__avatar grey"
          style="height: 40px; min-width: 40px; width: 40px;"
        >
          
      TR
    
        </div>
         
        <div
          class="v-list-item__content"
        >
          <div
            class="v-list-item__title"
          >
            Tom Marvolo Riddle
          </div>
           
          <div
            class="v-list-item__subtitle"
          />
        </div>
         
        <div
          class="v-list-item__icon"
        >
          <button
            class="v-btn v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
            type="button"
          >
            <span
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate mdi mdi-lock-open-outline theme--light"
                style="font-size: 16px;"
              />
            </span>
          </button>
        </div>
      </div>
        
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots IndividualCard Locked 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <div
      class="mx-auto v-card v-card--raised v-sheet theme--light"
    >
      <div
        class="grow v-list-item theme--light"
        tabindex="-1"
      >
        <div
          class="v-avatar v-list-item__avatar grey"
          style="height: 40px; min-width: 40px; width: 40px;"
        >
          
      TR
    
        </div>
         
        <div
          class="v-list-item__content"
        >
          <div
            class="v-list-item__title"
          >
            Tom Marvolo Riddle
          </div>
           
          <div
            class="v-list-item__subtitle"
          />
        </div>
         
        <div
          class="v-list-item__icon"
        >
          <button
            class="v-btn v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
            type="button"
          >
            <span
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate mdi mdi-lock theme--light"
                style="font-size: 16px;"
              />
            </span>
          </button>
        </div>
      </div>
        
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots IndividualCard Single Initial 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <div
      class="mx-auto v-card v-card--raised v-sheet theme--light"
    >
      <div
        class="grow v-list-item theme--light"
        tabindex="-1"
      >
        <div
          class="v-avatar v-list-item__avatar grey"
          style="height: 40px; min-width: 40px; width: 40px;"
        >
          
      V
    
        </div>
         
        <div
          class="v-list-item__content"
        >
          <div
            class="v-list-item__title"
          >
            Voldemort
          </div>
           
          <div
            class="v-list-item__subtitle"
          />
        </div>
         
        <div
          class="v-list-item__icon"
        >
          <button
            class="v-btn v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
            type="button"
          >
            <span
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate mdi mdi-lock-open-outline theme--light"
                style="font-size: 16px;"
              />
            </span>
          </button>
        </div>
      </div>
        
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots IndividualCard Sources 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <div
      class="mx-auto v-card v-card--raised v-sheet theme--light"
    >
      <div
        class="grow v-list-item theme--light"
        tabindex="-1"
      >
        <div
          class="v-avatar v-list-item__avatar grey"
          style="height: 40px; min-width: 40px; width: 40px;"
        >
          
      TR
    
        </div>
         
        <div
          class="v-list-item__content"
        >
          <div
            class="v-list-item__title"
          >
            Tom Marvolo Riddle
          </div>
           
          <div
            class="v-list-item__subtitle"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-git theme--light"
              style="font-size: 16px;"
            />
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-github theme--light"
              style="font-size: 16px;"
            />
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-gitlab theme--light"
              style="font-size: 16px;"
            />
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-account-multiple theme--light"
              style="font-size: 16px;"
            />
          </div>
        </div>
         
        <div
          class="v-list-item__icon"
        >
          <button
            class="v-btn v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
            type="button"
          >
            <span
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate mdi mdi-lock-open-outline theme--light"
                style="font-size: 16px;"
              />
            </span>
          </button>
        </div>
      </div>
        
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots IndividualEntry Default 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <div
      class="v-data-table theme--light"
    >
      <div
        class="v-data-table__wrapper"
      >
        <table>
          <colgroup>
            <col
              class=""
            />
            <col
              class=""
            />
            <col
              class=""
            />
            <col
              class=""
            />
          </colgroup>
          <tbody>
            <tr>
              <td
                width="25%"
              >
                <div
                  class="v-list-item theme--light"
                  tabindex="-1"
                >
                  <div
                    class="v-avatar v-list-item__avatar grey"
                    style="height: 40px; min-width: 40px; width: 40px;"
                  >
                    
        TR
      
                  </div>
                   
                  <div
                    class="v-list-item__content"
                  >
                    <div
                      class="v-list-item__title"
                    >
                      Tom Marvolo Riddle
                    </div>
                     
                    <div
                      class="v-list-item__subtitle"
                    >
                      Slytherin
                    </div>
                  </div>
                </div>
              </td>
               
              <td
                class="text-center"
              >
                
    triddle@example.com
  
              </td>
               
              <td
                class="text-right"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-icon--left v-icon--right mdi mdi-git theme--light"
                />
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-icon--left v-icon--right mdi mdi-account-multiple theme--light"
                />
              </td>
               
              <td
                width="50"
              >
                <button
                  class="v-btn v-btn--flat v-btn--icon v-btn--round theme--light v-size--default"
                  type="button"
                >
                  <span
                    class="v-btn__content"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-chevron-down theme--light"
                    />
                  </span>
                </button>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots IndividualEntry No Email 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <div
      class="v-data-table theme--light"
    >
      <div
        class="v-data-table__wrapper"
      >
        <table>
          <colgroup>
            <col
              class=""
            />
            <col
              class=""
            />
            <col
              class=""
            />
            <col
              class=""
            />
          </colgroup>
          <tbody>
            <tr>
              <td
                width="25%"
              >
                <div
                  class="v-list-item theme--light"
                  tabindex="-1"
                >
                  <div
                    class="v-avatar v-list-item__avatar grey"
                    style="height: 40px; min-width: 40px; width: 40px;"
                  >
                    
        TR
      
                  </div>
                   
                  <div
                    class="v-list-item__content"
                  >
                    <div
                      class="v-list-item__title"
                    >
                      Tom Marvolo Riddle
                    </div>
                     
                    <div
                      class="v-list-item__subtitle"
                    >
                      Slytherin
                    </div>
                  </div>
                </div>
              </td>
               
              <td
                class="text-center"
              >
                
    
  
              </td>
               
              <td
                class="text-right"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-icon--left v-icon--right mdi mdi-git theme--light"
                />
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-icon--left v-icon--right mdi mdi-account-multiple theme--light"
                />
              </td>
               
              <td
                width="50"
              >
                <button
                  class="v-btn v-btn--flat v-btn--icon v-btn--round theme--light v-size--default"
                  type="button"
                >
                  <span
                    class="v-btn__content"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-chevron-down theme--light"
                    />
                  </span>
                </button>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots IndividualEntry No Organization 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <div
      class="v-data-table theme--light"
    >
      <div
        class="v-data-table__wrapper"
      >
        <table>
          <colgroup>
            <col
              class=""
            />
            <col
              class=""
            />
            <col
              class=""
            />
            <col
              class=""
            />
          </colgroup>
          <tbody>
            <tr>
              <td
                width="25%"
              >
                <div
                  class="v-list-item theme--light"
                  tabindex="-1"
                >
                  <div
                    class="v-avatar v-list-item__avatar grey"
                    style="height: 40px; min-width: 40px; width: 40px;"
                  >
                    
        TR
      
                  </div>
                   
                  <div
                    class="v-list-item__content"
                  >
                    <div
                      class="v-list-item__title"
                    >
                      Tom Marvolo Riddle
                    </div>
                     
                    <div
                      class="v-list-item__subtitle"
                    >
                      
                    </div>
                  </div>
                </div>
              </td>
               
              <td
                class="text-center"
              >
                
    triddle@example.com
  
              </td>
               
              <td
                class="text-right"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-icon--left v-icon--right mdi mdi-git theme--light"
                />
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-icon--left v-icon--right mdi mdi-account-multiple theme--light"
                />
              </td>
               
              <td
                width="50"
              >
                <button
                  class="v-btn v-btn--flat v-btn--icon v-btn--round theme--light v-size--default"
                  type="button"
                >
                  <span
                    class="v-btn__content"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-chevron-down theme--light"
                    />
                  </span>
                </button>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots IndividualEntry Single Inital 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <div
      class="v-data-table theme--light"
    >
      <div
        class="v-data-table__wrapper"
      >
        <table>
          <colgroup>
            <col
              class=""
            />
            <col
              class=""
            />
            <col
              class=""
            />
            <col
              class=""
            />
          </colgroup>
          <tbody>
            <tr>
              <td
                width="25%"
              >
                <div
                  class="v-list-item theme--light"
                  tabindex="-1"
                >
                  <div
                    class="v-avatar v-list-item__avatar grey"
                    style="height: 40px; min-width: 40px; width: 40px;"
                  >
                    
        V
      
                  </div>
                   
                  <div
                    class="v-list-item__content"
                  >
                    <div
                      class="v-list-item__title"
                    >
                      Voldemort
                    </div>
                     
                    <div
                      class="v-list-item__subtitle"
                    >
                      Death Eaters
                    </div>
                  </div>
                </div>
              </td>
               
              <td
                class="text-center"
              >
                
    lord.voldemort@example.com
  
              </td>
               
              <td
                class="text-right"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-icon--left v-icon--right mdi mdi-git theme--light"
                />
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-icon--left v-icon--right mdi mdi-account-multiple theme--light"
                />
              </td>
               
              <td
                width="50"
              >
                <button
                  class="v-btn v-btn--flat v-btn--icon v-btn--round theme--light v-size--default"
                  type="button"
                >
                  <span
                    class="v-btn__content"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-chevron-down theme--light"
                    />
                  </span>
                </button>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots IndividualsGrid Default 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <div
      class="v-card v-sheet theme--light"
      style="max-width: 750px;"
    >
      <div
        class="container container--fluid"
      >
        <div
          class="row row--dense"
        >
          <div
            class="col"
          >
            <div
              class="mx-auto v-card v-card--link v-card--raised v-sheet theme--light"
              tabindex="0"
            >
              <div
                class="grow v-list-item theme--light"
                tabindex="-1"
              >
                <div
                  class="v-avatar v-list-item__avatar grey"
                  style="height: 40px; min-width: 40px; width: 40px;"
                >
                  
      TR
    
                </div>
                 
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                  >
                    Tom Marvolo Riddle
                  </div>
                   
                  <div
                    class="v-list-item__subtitle"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-gitlab theme--light"
                      style="font-size: 16px;"
                    />
                  </div>
                </div>
                 
                <div
                  class="v-list-item__icon"
                >
                  <button
                    class="v-btn v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
                    type="button"
                  >
                    <span
                      class="v-btn__content"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate mdi mdi-lock theme--light"
                        style="font-size: 16px;"
                      />
                    </span>
                  </button>
                </div>
              </div>
                
              <!---->
            </div>
          </div>
          <div
            class="col"
          >
            <div
              class="mx-auto v-card v-card--link v-card--raised v-sheet theme--light"
              tabindex="0"
            >
              <div
                class="grow v-list-item theme--light"
                tabindex="-1"
              >
                <div
                  class="v-avatar v-list-item__avatar grey"
                  style="height: 40px; min-width: 40px; width: 40px;"
                >
                  
      HP
    
                </div>
                 
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                  >
                    Harry Potter
                  </div>
                   
                  <div
                    class="v-list-item__subtitle"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-github theme--light"
                      style="font-size: 16px;"
                    />
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-git theme--light"
                      style="font-size: 16px;"
                    />
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-account-multiple theme--light"
                      style="font-size: 16px;"
                    />
                  </div>
                </div>
                 
                <div
                  class="v-list-item__icon"
                >
                  <button
                    class="v-btn v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
                    type="button"
                  >
                    <span
                      class="v-btn__content"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate mdi mdi-lock-open-outline theme--light"
                        style="font-size: 16px;"
                      />
                    </span>
                  </button>
                </div>
              </div>
                
              <!---->
            </div>
          </div>
          <div
            class="col"
          >
            <div
              class="mx-auto v-card v-card--link v-card--raised v-sheet theme--light"
              tabindex="0"
            >
              <div
                class="grow v-list-item theme--light"
                tabindex="-1"
              >
                <div
                  class="v-avatar v-list-item__avatar grey"
                  style="height: 40px; min-width: 40px; width: 40px;"
                >
                  
      V
    
                </div>
                 
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                  >
                    Voldemort
                  </div>
                   
                  <div
                    class="v-list-item__subtitle"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-gitlab theme--light"
                      style="font-size: 16px;"
                    />
                  </div>
                </div>
                 
                <div
                  class="v-list-item__icon"
                >
                  <button
                    class="v-btn v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
                    type="button"
                  >
                    <span
                      class="v-btn__content"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate mdi mdi-lock-open-outline theme--light"
                        style="font-size: 16px;"
                      />
                    </span>
                  </button>
                </div>
              </div>
                
              <!---->
            </div>
          </div>
          <div
            class="col"
          >
            <div
              class="mx-auto v-card v-card--link v-card--raised v-sheet theme--light"
              tabindex="0"
            >
              <div
                class="grow v-list-item theme--light"
                tabindex="-1"
              >
                <div
                  class="v-avatar v-list-item__avatar grey"
                  style="height: 40px; min-width: 40px; width: 40px;"
                >
                  
      HG
    
                </div>
                 
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                  >
                    Hermione Granger
                  </div>
                   
                  <div
                    class="v-list-item__subtitle"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-github theme--light"
                      style="font-size: 16px;"
                    />
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-git theme--light"
                      style="font-size: 16px;"
                    />
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-account-multiple theme--light"
                      style="font-size: 16px;"
                    />
                  </div>
                </div>
                 
                <div
                  class="v-list-item__icon"
                >
                  <button
                    class="v-btn v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
                    type="button"
                  >
                    <span
                      class="v-btn__content"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate mdi mdi-lock-open-outline theme--light"
                        style="font-size: 16px;"
                      />
                    </span>
                  </button>
                </div>
              </div>
                
              <!---->
            </div>
          </div>
          <div
            class="col"
          >
            <div
              class="mx-auto v-card v-card--link v-card--raised v-sheet theme--light"
              tabindex="0"
            >
              <div
                class="grow v-list-item theme--light"
                tabindex="-1"
              >
                <div
                  class="v-avatar v-list-item__avatar grey"
                  style="height: 40px; min-width: 40px; width: 40px;"
                >
                  
      AD
    
                </div>
                 
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                  >
                    Ambus Dumbledore
                  </div>
                   
                  <div
                    class="v-list-item__subtitle"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-github theme--light"
                      style="font-size: 16px;"
                    />
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-git theme--light"
                      style="font-size: 16px;"
                    />
                  </div>
                </div>
                 
                <div
                  class="v-list-item__icon"
                >
                  <button
                    class="v-btn v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
                    type="button"
                  >
                    <span
                      class="v-btn__content"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate mdi mdi-lock-open-outline theme--light"
                        style="font-size: 16px;"
                      />
                    </span>
                  </button>
                </div>
              </div>
                
              <!---->
            </div>
          </div>
          <div
            class="col"
          >
            <div
              class="mx-auto v-card v-card--link v-card--raised v-sheet theme--light"
              tabindex="0"
            >
              <div
                class="grow v-list-item theme--light"
                tabindex="-1"
              >
                <div
                  class="v-avatar v-list-item__avatar grey"
                  style="height: 40px; min-width: 40px; width: 40px;"
                >
                  
      RW
    
                </div>
                 
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                  >
                    Ron Weasley
                  </div>
                   
                  <div
                    class="v-list-item__subtitle"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-github theme--light"
                      style="font-size: 16px;"
                    />
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-git theme--light"
                      style="font-size: 16px;"
                    />
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-account-multiple theme--light"
                      style="font-size: 16px;"
                    />
                  </div>
                </div>
                 
                <div
                  class="v-list-item__icon"
                >
                  <button
                    class="v-btn v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
                    type="button"
                  >
                    <span
                      class="v-btn__content"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate mdi mdi-lock-open-outline theme--light"
                        style="font-size: 16px;"
                      />
                    </span>
                  </button>
                </div>
              </div>
                
              <!---->
            </div>
          </div>
          <div
            class="col"
          >
            <div
              class="mx-auto v-card v-card--link v-card--raised v-sheet theme--light"
              tabindex="0"
            >
              <div
                class="grow v-list-item theme--light"
                tabindex="-1"
              >
                <div
                  class="v-avatar v-list-item__avatar grey"
                  style="height: 40px; min-width: 40px; width: 40px;"
                >
                  
      SS
    
                </div>
                 
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                  >
                    Severus Snape
                  </div>
                   
                  <div
                    class="v-list-item__subtitle"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-gitlab theme--light"
                      style="font-size: 16px;"
                    />
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-github theme--light"
                      style="font-size: 16px;"
                    />
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-git theme--light"
                      style="font-size: 16px;"
                    />
                  </div>
                </div>
                 
                <div
                  class="v-list-item__icon"
                >
                  <button
                    class="v-btn v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
                    type="button"
                  >
                    <span
                      class="v-btn__content"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate mdi mdi-lock-open-outline theme--light"
                        style="font-size: 16px;"
                      />
                    </span>
                  </button>
                </div>
              </div>
                
              <!---->
            </div>
          </div>
          <div
            class="col"
          >
            <div
              class="mx-auto v-card v-card--link v-card--raised v-sheet theme--light"
              tabindex="0"
            >
              <div
                class="grow v-list-item theme--light"
                tabindex="-1"
              >
                <div
                  class="v-avatar v-list-item__avatar grey"
                  style="height: 40px; min-width: 40px; width: 40px;"
                >
                  
      H
    
                </div>
                 
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                  >
                    Hagrid
                  </div>
                   
                  <div
                    class="v-list-item__subtitle"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-git theme--light"
                      style="font-size: 16px;"
                    />
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-account-multiple theme--light"
                      style="font-size: 16px;"
                    />
                  </div>
                </div>
                 
                <div
                  class="v-list-item__icon"
                >
                  <button
                    class="v-btn v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
                    type="button"
                  >
                    <span
                      class="v-btn__content"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate mdi mdi-lock-open-outline theme--light"
                        style="font-size: 16px;"
                      />
                    </span>
                  </button>
                </div>
              </div>
                
              <!---->
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots IndividualsGrid Empty 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <div
      class="v-card v-sheet theme--light"
      style="max-width: 750px;"
    >
      <div
        class="v-card__text"
      >
        No individuals found
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots IndividualsTable Default 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <div
      class="v-data-table theme--light"
    >
      <div
        class="v-data-table__wrapper"
      >
        <table>
          <colgroup>
            <col
              class=""
            />
            <col
              class=""
            />
            <col
              class=""
            />
            <col
              class=""
            />
          </colgroup>
          <tbody>
            <tr>
              <td
                width="25%"
              >
                <div
                  class="v-list-item theme--light"
                  tabindex="-1"
                >
                  <div
                    class="v-avatar v-list-item__avatar grey"
                    style="height: 40px; min-width: 40px; width: 40px;"
                  >
                    
        TR
      
                  </div>
                   
                  <div
                    class="v-list-item__content"
                  >
                    <div
                      class="v-list-item__title"
                    >
                      Tom Marvolo Riddle
                    </div>
                     
                    <div
                      class="v-list-item__subtitle"
                    >
                      Slytherin
                    </div>
                  </div>
                </div>
              </td>
               
              <td
                class="text-center"
              >
                
    triddle@example.com
  
              </td>
               
              <td
                class="text-right"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-icon--left v-icon--right mdi mdi-github theme--light"
                />
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-icon--left v-icon--right mdi mdi-git theme--light"
                />
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-icon--left v-icon--right mdi mdi-account-multiple theme--light"
                />
              </td>
               
              <td
                width="50"
              >
                <button
                  class="v-btn v-btn--flat v-btn--icon v-btn--round theme--light v-size--default"
                  type="button"
                >
                  <span
                    class="v-btn__content"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-chevron-down theme--light"
                    />
                  </span>
                </button>
              </td>
            </tr>
            <tr>
              <td
                width="25%"
              >
                <div
                  class="v-list-item theme--light"
                  tabindex="-1"
                >
                  <div
                    class="v-avatar v-list-item__avatar grey"
                    style="height: 40px; min-width: 40px; width: 40px;"
                  >
                    
        HP
      
                  </div>
                   
                  <div
                    class="v-list-item__content"
                  >
                    <div
                      class="v-list-item__title"
                    >
                      Harry Potter
                    </div>
                     
                    <div
                      class="v-list-item__subtitle"
                    >
                      Griffyndor
                    </div>
                  </div>
                </div>
              </td>
               
              <td
                class="text-center"
              >
                
    hpotter@example.com
  
              </td>
               
              <td
                class="text-right"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-icon--left v-icon--right mdi mdi-git theme--light"
                />
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-icon--left v-icon--right mdi mdi-gitlab theme--light"
                />
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-icon--left v-icon--right mdi mdi-github theme--light"
                />
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-icon--left v-icon--right mdi mdi-account-multiple theme--light"
                />
              </td>
               
              <td
                width="50"
              >
                <button
                  class="v-btn v-btn--flat v-btn--icon v-btn--round theme--light v-size--default"
                  type="button"
                >
                  <span
                    class="v-btn__content"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-chevron-down theme--light"
                    />
                  </span>
                </button>
              </td>
            </tr>
            <tr>
              <td
                width="25%"
              >
                <div
                  class="v-list-item theme--light"
                  tabindex="-1"
                >
                  <div
                    class="v-avatar v-list-item__avatar grey"
                    style="height: 40px; min-width: 40px; width: 40px;"
                  >
                    
        V
      
                  </div>
                   
                  <div
                    class="v-list-item__content"
                  >
                    <div
                      class="v-list-item__title"
                    >
                      Voldemort
                    </div>
                     
                    <div
                      class="v-list-item__subtitle"
                    >
                      Death Eaters
                    </div>
                  </div>
                </div>
              </td>
               
              <td
                class="text-center"
              >
                
    
  
              </td>
               
              <td
                class="text-right"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-icon--left v-icon--right mdi mdi-account-multiple theme--light"
                />
              </td>
               
              <td
                width="50"
              >
                <button
                  class="v-btn v-btn--flat v-btn--icon v-btn--round theme--light v-size--default"
                  type="button"
                >
                  <span
                    class="v-btn__content"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-chevron-down theme--light"
                    />
                  </span>
                </button>
              </td>
            </tr>
            <tr>
              <td
                width="25%"
              >
                <div
                  class="v-list-item theme--light"
                  tabindex="-1"
                >
                  <div
                    class="v-avatar v-list-item__avatar grey"
                    style="height: 40px; min-width: 40px; width: 40px;"
                  >
                    
        SS
      
                  </div>
                   
                  <div
                    class="v-list-item__content"
                  >
                    <div
                      class="v-list-item__title"
                    >
                      Severus Snape
                    </div>
                     
                    <div
                      class="v-list-item__subtitle"
                    >
                      Slytherin
                    </div>
                  </div>
                </div>
              </td>
               
              <td
                class="text-center"
              >
                
    snape@example.com
  
              </td>
               
              <td
                class="text-right"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-icon--left v-icon--right mdi mdi-git theme--light"
                />
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-icon--left v-icon--right mdi mdi-github theme--light"
                />
              </td>
               
              <td
                width="50"
              >
                <button
                  class="v-btn v-btn--flat v-btn--icon v-btn--round theme--light v-size--default"
                  type="button"
                >
                  <span
                    class="v-btn__content"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-chevron-down theme--light"
                    />
                  </span>
                </button>
              </td>
            </tr>
            <tr>
              <td
                width="25%"
              >
                <div
                  class="v-list-item theme--light"
                  tabindex="-1"
                >
                  <div
                    class="v-avatar v-list-item__avatar grey"
                    style="height: 40px; min-width: 40px; width: 40px;"
                  >
                    
        HG
      
                  </div>
                   
                  <div
                    class="v-list-item__content"
                  >
                    <div
                      class="v-list-item__title"
                    >
                      Hermione Granger
                    </div>
                     
                    <div
                      class="v-list-item__subtitle"
                    >
                      Gryffindor
                    </div>
                  </div>
                </div>
              </td>
               
              <td
                class="text-center"
              >
                
    hermionegranger@example.com
  
              </td>
               
              <td
                class="text-right"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-icon--left v-icon--right mdi mdi-git theme--light"
                />
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-icon--left v-icon--right mdi mdi-gitlab theme--light"
                />
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-icon--left v-icon--right mdi mdi-github theme--light"
                />
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-icon--left v-icon--right mdi mdi-account-multiple theme--light"
                />
              </td>
               
              <td
                width="50"
              >
                <button
                  class="v-btn v-btn--flat v-btn--icon v-btn--round theme--light v-size--default"
                  type="button"
                >
                  <span
                    class="v-btn__content"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-chevron-down theme--light"
                    />
                  </span>
                </button>
              </td>
            </tr>
            <tr>
              <td
                width="25%"
              >
                <div
                  class="v-list-item theme--light"
                  tabindex="-1"
                >
                  <div
                    class="v-avatar v-list-item__avatar grey"
                    style="height: 40px; min-width: 40px; width: 40px;"
                  >
                    
        RW
      
                  </div>
                   
                  <div
                    class="v-list-item__content"
                  >
                    <div
                      class="v-list-item__title"
                    >
                      Ron Weasley
                    </div>
                     
                    <div
                      class="v-list-item__subtitle"
                    >
                      Gryffindor
                    </div>
                  </div>
                </div>
              </td>
               
              <td
                class="text-center"
              >
                
    ron@example.com
  
              </td>
               
              <td
                class="text-right"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-icon--left v-icon--right mdi mdi-git theme--light"
                />
              </td>
               
              <td
                width="50"
              >
                <button
                  class="v-btn v-btn--flat v-btn--icon v-btn--round theme--light v-size--default"
                  type="button"
                >
                  <span
                    class="v-btn__content"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-chevron-down theme--light"
                    />
                  </span>
                </button>
              </td>
            </tr>
            <tr>
              <td
                width="25%"
              >
                <div
                  class="v-list-item theme--light"
                  tabindex="-1"
                >
                  <div
                    class="v-avatar v-list-item__avatar grey"
                    style="height: 40px; min-width: 40px; width: 40px;"
                  >
                    
        AD
      
                  </div>
                   
                  <div
                    class="v-list-item__content"
                  >
                    <div
                      class="v-list-item__title"
                    >
                      Albus Dumbledore
                    </div>
                     
                    <div
                      class="v-list-item__subtitle"
                    >
                      Order of the Phoenix
                    </div>
                  </div>
                </div>
              </td>
               
              <td
                class="text-center"
              >
                
    albus.dumbledore@example.com
  
              </td>
               
              <td
                class="text-right"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-icon--left v-icon--right mdi mdi-gitlab theme--light"
                />
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-icon--left v-icon--right mdi mdi-account-multiple theme--light"
                />
              </td>
               
              <td
                width="50"
              >
                <button
                  class="v-btn v-btn--flat v-btn--icon v-btn--round theme--light v-size--default"
                  type="button"
                >
                  <span
                    class="v-btn__content"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate mdi mdi-chevron-down theme--light"
                    />
                  </span>
                </button>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        class="v-data-footer"
      >
        <div
          class="v-data-footer__select"
        >
          Rows per page:
          <div
            class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select"
          >
            <div
              class="v-input__control"
            >
              <div
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-owns="list-289"
                class="v-input__slot"
                role="button"
              >
                <div
                  class="v-select__slot"
                >
                  <div
                    class="v-select__selections"
                  >
                    <div
                      class="v-select__selection v-select__selection--comma"
                    >
                      10
                    </div>
                    <input
                      aria-label="$vuetify.dataTable.itemsPerPageText"
                      aria-readonly="false"
                      autocomplete="off"
                      id="input-289"
                      readonly="readonly"
                      type="text"
                    />
                  </div>
                  <div
                    class="v-input__append-inner"
                  >
                    <div
                      class="v-input__icon v-input__icon--append"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate mdi mdi-menu-down theme--light"
                      />
                    </div>
                  </div>
                  <input
                    type="hidden"
                    value="10"
                  />
                </div>
                <div
                  class="v-menu"
                >
                  <!---->
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="v-data-footer__pagination"
        >
          1-7 of 7
        </div>
        <div
          class="v-data-footer__icons-before"
        >
          <button
            aria-label="Previous page"
            class="v-btn v-btn--disabled v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
            disabled="disabled"
            type="button"
          >
            <span
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate mdi mdi-chevron-left theme--light"
              />
            </span>
          </button>
        </div>
        <div
          class="v-data-footer__icons-after"
        >
          <button
            aria-label="Next page"
            class="v-btn v-btn--disabled v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
            disabled="disabled"
            type="button"
          >
            <span
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate mdi mdi-chevron-right theme--light"
              />
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ProfileCard Default 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <div
      class="mx-auto v-card v-card--raised v-sheet theme--light"
      style="width: 600px;"
    >
      <div
        class="grow v-list-item theme--light"
        tabindex="-1"
      >
        <div
          class="v-avatar v-list-item__avatar grey"
          style="height: 40px; min-width: 40px; width: 40px;"
        >
          
      TR
    
        </div>
         
        <div
          class="v-list-item__content"
        >
          <div
            class="v-list-item__title"
          >
            Tom Marvolo Riddle
          </div>
           
          <div
            class="v-list-item__subtitle"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-github theme--light"
              style="font-size: 16px;"
            />
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-git theme--light"
              style="font-size: 16px;"
            />
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-account-multiple theme--light"
              style="font-size: 16px;"
            />
          </div>
        </div>
         
        <div
          class="v-list-item__icon"
        >
          <button
            class="v-btn v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
            type="button"
          >
            <span
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate mdi mdi-lock-open-outline theme--light"
                style="font-size: 16px;"
              />
            </span>
          </button>
        </div>
      </div>
       
      <div
        class="v-list-group"
      >
        <div
          aria-expanded="false"
          class="v-list-group__header v-list-item v-list-item--link theme--light"
          role="button"
          tabindex="0"
        >
          <div
            class="v-list-item__title"
          >
            
        Identities (4)
      
          </div>
          <div
            class="v-list-item__icon v-list-group__header__append-icon"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-chevron-down theme--light"
            />
          </div>
        </div>
        <!---->
      </div>
       
      <div
        class="v-list-group"
      >
        <div
          aria-expanded="false"
          class="v-list-group__header v-list-item v-list-item--link theme--light"
          role="button"
          tabindex="0"
        >
          <div
            class="v-list-item__content"
          >
            <div
              class="v-list-item__title"
            >
              
          Organizations (2)
        
            </div>
          </div>
          <div
            class="v-list-item__icon v-list-group__header__append-icon"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-chevron-down theme--light"
            />
          </div>
        </div>
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;
